# ROS_template_package

./: CMakeLists.txt  README.md  package.xml
cfg/: PublishNodeDynCfg.cfg  SubscribeNodeDynCfg.cfg
launch/: template.launch  template_py.launch
scripts/: publisher_py.py  subscriber_py.py
src/: publisher.cpp  subscriber.cpp
